Removing borders for debugging; fixed scrollbar showing on landing page center bubble

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -92,16 +92,16 @@ body {
 }
 
 /* Media queries for font-size */
-@media screen and (max-width: 860px){
+@media screen and (max-width: 922px){
   .center {
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 0;
   }
 }
 @media screen and (max-width: 720px){
   .center {
     font-size: 1rem;
-    padding: 2rem;
+    /* padding: 2rem; */
     margin-top: 1rem;
   }
   .bubble > a {
